connected user fixed