@@ -1,32 +1,39 @@
 package tn.esprit.back.Services.User;
 
-
 import lombok.RequiredArgsConstructor;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.stereotype.Service;
 import tn.esprit.back.Entities.User.User;
 import tn.esprit.back.Repository.User.UserRepository;
-import java.util.Collections;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
+import java.util.Collections;
+import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class CustomUserDetailsService implements UserDetailsService {
 
-    private  final UserRepository userRepository;
+    private static final Logger logger = LoggerFactory.getLogger(CustomUserDetailsService.class);
+    private final UserRepository userRepository;
 
-    @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-        User user =userRepository.findByusername(username);
-        if(user==null){
-            throw new UsernameNotFoundException("user not found");
-        }
-        return new org.springframework.security.core.userdetails.User(user.getUsername(),user.getPassword(),Collections.singletonList(new SimpleGrantedAuthority(user.getRole().toString())));
+        User user = userRepository.findByUsername(username);
+
+        // Convert the single Role object to SimpleGrantedAuthority
+        GrantedAuthority authority = new SimpleGrantedAuthority(user.getRole().getAuthority());
+
+        return new org.springframework.security.core.userdetails.User(user.getUsername(), user.getPassword(), List.of(authority));
     }
+
+
     public User getConnectedUser() {
         // Retrieve the authentication object from the SecurityContextHolder
         Object principal = SecurityContextHolder.getContext().getAuthentication().getPrincipal();
@@ -35,9 +42,9 @@ public class CustomUserDetailsService implements UserDetailsService {
             // If the principal is of type User, return the authenticated user
             return (User) principal;
         } else {
-            // In case the principal is not of type User, handle accordingly
-            throw new RuntimeException("User is not authenticated");
+            // Return null instead of throwing an exception, depending on your use case
+            logger.warn("User is not authenticated");
+            return null;
         }
     }
-
 }
